--- a/Draw/Controller/Common/DiceRoomPasswordDialog.xib
+++ b/Draw/Controller/Common/DiceRoomPasswordDialog.xib
@@ -47,7 +47,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{300, 184}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="146925368"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -59,9 +58,8 @@
 							<object class="IBUIButton" id="244077518">
 								<reference key="NSNextResponder" ref="961595998"/>
 								<int key="NSvFlags">283</int>
-								<string key="NSFrame">{{199, 130}, {81, 36}}</string>
+								<string key="NSFrame">{{177, 130}, {81, 36}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -71,7 +69,7 @@
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
-								<object class="NSColor" key="IBUINormalTitleColor" id="931767357">
+								<object class="NSColor" key="IBUINormalTitleColor" id="250930075">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MCAwIDAAA</bytes>
 								</object>
@@ -89,9 +87,8 @@
 							<object class="IBUIButton" id="755309997">
 								<reference key="NSNextResponder" ref="961595998"/>
 								<int key="NSvFlags">286</int>
-								<string key="NSFrame">{{20, 130}, {81, 36}}</string>
+								<string key="NSFrame">{{43, 130}, {81, 36}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="244077518"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -99,7 +96,7 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<string key="IBUITitleShadowOffset">{0, 1}</string>
 								<reference key="IBUIHighlightedTitleColor" ref="301673449"/>
-								<reference key="IBUINormalTitleColor" ref="931767357"/>
+								<reference key="IBUINormalTitleColor" ref="250930075"/>
 								<reference key="IBUINormalTitleShadowColor" ref="301673449"/>
 								<reference key="IBUIFontDescription" ref="655663959"/>
 								<reference key="IBUIFont" ref="328412362"/>
@@ -109,7 +106,6 @@
 								<int key="NSvFlags">314</int>
 								<string key="NSFrame">{{117, 51}, {163, 24}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="445091174"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="826739735">
 									<int key="NSColorSpace">3</int>
@@ -151,7 +147,6 @@
 								<int key="NSvFlags">314</int>
 								<string key="NSFrame">{{117, 90}, {163, 24}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="755309997"/>
 								<reference key="IBUIBackgroundColor" ref="826739735"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -177,7 +172,6 @@
 								<int key="NSvFlags">306</int>
 								<string key="NSFrame">{{43, 12}, {200, 28}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="477338562"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -205,7 +199,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 47}, {89, 32}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="973088010"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -238,7 +231,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 86}, {89, 32}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="914890163"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -260,7 +252,6 @@
 						</array>
 						<string key="NSFrame">{{15, 45}, {300, 184}}</string>
 						<reference key="NSSuperview" ref="908420203"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="141245721"/>
 						<reference key="IBUIBackgroundColor" ref="826739735"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -268,7 +259,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="961595998"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -489,139 +479,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">24</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CommonInfoView</string>
-					<string key="superclassName">UIView</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">contentView</string>
-						<string key="NS.object.0">UIView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">contentView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonInfoView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FontButton</string>
-					<string key="superclassName">UIGlossyButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontButton.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FontLabel</string>
-					<string key="superclassName">UILabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontLabel.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HKGirlFontLabel</string>
-					<string key="superclassName">FontLabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HKGirlFontLabel.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">InputDialog</string>
-					<string key="superclassName">CommonInfoView</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="clickCancelButton:">id</string>
-						<string key="clickOkButton:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="clickCancelButton:">
-							<string key="name">clickCancelButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="clickOkButton:">
-							<string key="name">clickOkButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="bgView">UIImageView</string>
-						<string key="cancelButton">FontButton</string>
-						<string key="okButton">FontButton</string>
-						<string key="targetTextField">UITextField</string>
-						<string key="titleLabel">FontButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="bgView">
-							<string key="name">bgView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cancelButton">
-							<string key="name">cancelButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="okButton">
-							<string key="name">okButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="targetTextField">
-							<string key="name">targetTextField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/InputDialog.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">RoomPasswordDialog</string>
-					<string key="superclassName">InputDialog</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="passwordField">UITextField</string>
-						<string key="passwordLabel">UILabel</string>
-						<string key="roomNameLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="passwordField">
-							<string key="name">passwordField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="passwordLabel">
-							<string key="name">passwordLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="roomNameLabel">
-							<string key="name">roomNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/RoomPasswordDialog.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">UIGlossyButton</string>
-					<string key="superclassName">UIButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UIGlossyButton.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
